updated swagger yaml for models
