# swagger.yaml
@@ -24,7 +24,12 @@ definitions:
       version:
         type: string
         description: Version identifier
-
+      branch:
+        type: string
+        description: Branch in repository containing the resource
+      upstreamURL:
+        type: string
+        description: Upstream respository containing the resource
   CreateProject:
     type: object
     required:
@@ -133,12 +138,6 @@ definitions:
     properties:
       serviceName:
         type: string
-      helmChart:
-        type: string
-      deploymentStrategies:
-        type: object
-        additionalProperties:
-          type: string
   Service:
     type: object
     properties:
@@ -219,15 +218,9 @@ definitions:
         type: string
         # format: byte
         description: Resource content
-      upstreamURL:
-        type: string
-        description: Upstream repository containing the resource
-      version:
-        type: string
-        description: version/git commit id of the resource
-      branch:
-        type: string
-        description: branch in git repo containing the resource
+      metadata:
+        $ref: '#/definitions/Version'
+        description: Metadata
 
   Resources:
     type: object
